tests/baselines/reference/exportImport.errors.txt
tests/cases/compiler/w1.ts(1,1): error TS2449: Class 'Widget1' used before its declaration.
tests/cases/compiler/w1.ts(1,10): error TS2449: Class 'Widget1' used before its declaration.


==== tests/cases/compiler/consumer.ts (0 errors) ====
    import e = require('./exporter');
    
    export function w(): e.w { // Should be OK
        return new e.w();
    }
==== tests/cases/compiler/w1.ts (2 errors) ====
    export = Widget1
    ~~~~~~~~~~~~~~~~
!!! error TS2449: Class 'Widget1' used before its declaration.
             ~~~~~~~
!!! error TS2449: Class 'Widget1' used before its declaration.
    class Widget1 { name = 'one'; }
    
==== tests/cases/compiler/exporter.ts (0 errors) ====
    export import w = require('./w1');
    